// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anontools renders an anontools component when no token is specified 1`] = `
<a
  aria-label="login"
  href="/login?return_url=myid"
  id="ddcms_login"
  onClick={[Function]}
>
  <button
    className="govuk-button govuk-!-margin-0 "
    data-module="govuk-button"
  >
    Log in
  </button>
</a>
`;

exports[`Anontools should render an anontools component when a token is specified to logout 1`] = `
<a
  aria-label="logout"
  href="/logout?return_url=myid"
  id="ddcms_login"
  onClick={[Function]}
>
  <button
    className="govuk-button govuk-!-margin-0 "
    data-module="govuk-button"
  >
    Log out
  </button>
</a>
`;
